ThatTeamIngress_gcp.yaml
###################    DEPLOYMENTS   ########################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: users-deployment
  labels:
    app: users-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ThatTeam_Users
  template:
    metadata:
      labels:
        app: ThatTeam_Users
    spec:
      containers:
        - name: users
          image: thatteamrulez/users
          ports:
            - containerPort: 8080 #due to containers being isolated - all these can be 8080 and not error out.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocache-deployment
  labels:
    app: geo-cache-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ThatTeam_GeoCache
  template:
    metadata:
      labels:
        app: ThatTeam_GeoCache
    spec:
      containers:
        - name: geocache
          image: thatteamrulez/geocache
          ports:
            - containerPort: 8080 #due to containers being isolated - all these can be 8080 and not error out.

###################    SERVICES   ########################
---
kind: Service
apiVersion: v1
metadata:
  name: users-service
  # annotations:
  #     cloud.google.com/load-balancer-type: "Internal"
spec:
  type: NodePort
  selector:
    app: ThatTeam_Users
  ports:
    - port: 3050 # used by other pods
      nodePort: 30800 # port exposed on the container  NEEDS TO BE HERE.   Also due to containers being isolated - all these can be 8080 and not error out.
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: geocache-service
  # annotations:
  #     cloud.google.com/load-balancer-type: "Internal"
spec:
  type: NodePort
  selector:
    app: ThatTeam_GeoCache
  ports:
    - port: 3051 # used by other pods
      nodePort: 30801 # port exposed on the container  NEEDS TO BE HERE.   Also due to containers being isolated - all these can be 8080 and not error out.
      protocol: TCP

---
###################    INGRESS   ########################

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thatteam-ingress-test
  annotations:
    # ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "gce"
  # #namespace: default
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /ThatTeam_Users/
            backend:
              serviceName: users-service
              servicePort: 3050 #This port needs to match the PORT of hte service mapped
          - path: /ThatTeam_GeoCache/
            backend:
              serviceName: geocache-service
              servicePort: 3051 #This port needs to match the PORT of hte service mapped
          - path: /ThatTeam_Users/*
            backend:
              serviceName: users-service
              servicePort: 3050 #This port needs to match the PORT of hte service mapped
          - path: /ThatTeam_GeoCache/*
            backend:
              serviceName: geocache-service
              servicePort: 3051 #This port needs to match the PORT of hte service mapped
